# indi-3rdparty

indi-aok/: CMakeLists.txt  lx200aok.cpp  lx200aok.h
indi-rollogo/: CMakeLists.txt  ChangeLog  build.sh  config.h.cmake  indi_rollogo.xml.cmake  readme.txt  rollogo.cpp  rollogo.h
indi-rollogo/LOGO.doc/: SternwarteDach++.lsc
